# TranscriptionPersonal

./: .gitignore  DECISIONS.md  transcription-notes.md
docs/superpowers/plans/: 2026-03-28-local-transcription.md
pipeline/: pyproject.toml
pipeline/src/pipeline/: audio.py  cli.py  config.py  diarizer.py  exceptions.py  formatter.py  models.py  orchestrator.py  transcriber.py  vad.py
pipeline/tests/: conftest.py  test_audio.py  test_formatter.py  test_models.py  test_orchestrator.py
recorder/: pyproject.toml
recorder/src/recorder/: capture.py  cli.py  config.py  devices.py  exceptions.py
recorder/tests/: conftest.py  test_capture.py  test_devices.py
scripts/: transfer.sh
