[project]
name = "transcription-pipeline"
version = "0.1.0"
description = "Speech transcription pipeline for Jetson Orin Nano"
requires-python = ">=3.11"
dependencies = [
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
diarization = [
    "pyannote.audio>=3.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.scripts]
transcribe = "pipeline.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
