[project]
name = "transcription-recorder"
version = "0.1.0"
description = "Two-channel audio recorder for local transcription"
requires-python = ">=3.11"
dependencies = [
    "soundcard>=0.4.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.scripts]
record = "recorder.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
